frontend/styles/main-product.css
rte-formatter.product-description {
    font-family: var(--font-kurdis) !important;
    font-size: 14px;
    line-height: 160%;
    font-weight: 700;
    color: var(--color-bear-black) !important;
    margin-bottom: 25px !important;

    ul {
        margin-bottom: 0 !important;
        list-style-type: none !important;
        padding-inline-start: 1rem !important;

        li:not(:last-child) {
            margin-bottom: 0;
        }

        li {
            position: relative;
            span {

                font-family: var(--font-kurdis) !important;
                font-size: 14px !important;
                line-height: 130% !important;
                font-weight: 600 !important;
                color: var(--color-bear-black) !important;

            }
        }

        li::before {
            content: "•";
            position: absolute;
            left: -1em;
            top: 0em; /* adjust this to align */
            font-size: 1rem;
        }
    }
}

.product-information-96oz rte-formatter.product-description {
    margin-bottom: 1rem !important;
}

.product-information-32oz rte-formatter.product-description {
    margin-bottom: 1.125rem !important;
    margin-top: 0.25rem;
}

input[name="purchase_option"]:checked + label {
    background-color: var(--color-dark-foam);
    border: 1px solid var(--color-espresso);
}

.subscription-value-props ul {
    font-family: var(--font-kurdis-semi-condensed);
    color: var(--color-bear-black);
    font-size: 12px;
    font-weight: 600;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 4px 8px;
    line-height: 120%;
    padding-left: 12px;
    padding-right: 12px;

    li {
        position: relative;
        padding-left: 20px;
    }
    
    li::before {
        content: '';
        position: absolute;
        left: 0;
        top: 2px;
    
        width: 12px;
        height: 11px;
    
        background-repeat: no-repeat;
        background-size: contain;
    
        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='11' viewBox='0 0 12 11' fill='none'%3E%3Cpath d='M10.3589 0.152908C7.87155 2.0711 5.74656 4.40752 4.12225 7.12816C3.9495 7.44218 3.77675 7.77324 3.604 8.08726C2.98182 7.44218 2.29081 6.84887 1.54853 6.34344C1.09911 6.02943 0.37369 6.23854 0.132097 6.72695C-0.14458 7.2501 0.0281745 7.82569 0.512022 8.15675C0.650359 8.24394 0.77115 8.34884 0.909481 8.43603C0.927027 8.45374 1.0134 8.50551 1.04782 8.54094C1.08223 8.55865 1.11665 8.59339 1.11665 8.59339C1.35823 8.78548 1.60048 8.99459 1.82521 9.22144C2.04991 9.43056 2.25709 9.63968 2.44739 9.86652C2.55131 9.97142 2.65456 10.0933 2.74094 10.2153C2.7929 10.2848 2.84486 10.3549 2.91369 10.4244C2.9481 10.4769 3.12086 10.7037 2.96565 10.4769C3.19036 10.7732 3.46636 11 3.86383 11C4.19179 11 4.60679 10.8079 4.76201 10.4769C5.36664 9.13425 6.10961 7.86114 6.95582 6.6582C7.05974 6.51856 7.16299 6.36188 7.2669 6.22224C7.31887 6.15276 7.37083 6.0826 7.42211 6.03015C7.45652 5.99541 7.47407 5.96067 7.50848 5.92525C7.73319 5.62893 7.97479 5.34966 8.21704 5.07105C8.70088 4.51316 9.2016 3.99002 9.71984 3.48389C10.0134 3.20461 10.3069 2.926 10.618 2.66443C10.7732 2.52479 10.946 2.38515 11.1187 2.24619C11.1876 2.19374 11.2739 2.12426 11.3434 2.07181C11.361 2.07181 11.361 2.0541 11.3779 2.0541C11.4123 2.01936 11.4467 2.00165 11.4818 1.98462C11.7065 1.81024 11.8792 1.65357 11.9656 1.35657C12.0344 1.11271 12 0.780983 11.8617 0.554142C11.5162 0.100474 10.8252 -0.195828 10.3589 0.152934L10.3589 0.152908Z' fill='black'/%3E%3C/svg%3E");
    }
}

.flavor-container {
    overflow-y: scroll;
    scrollbar-width: thin;
    scrollbar-color: var(--color-espresso) rgba(67, 26, 3, 0.2);
}

.flavor-container::-webkit-scrollbar {
    width: 8px;
    -webkit-appearance: none;
}

.flavor-container::-webkit-scrollbar-track {
    background: rgba(67, 26, 3, 0.2);
    border-radius: 999px;
}

.flavor-container::-webkit-scrollbar-thumb {
    background: var(--color-espresso);
    border-radius: 999px;

    /* makes it render more solid on macOS */
    border: 2px solid transparent;
    background-clip: padding-box;
}

.review-heading h2 {
    font-size: 60px !important;
}

@media screen and (max-width: 1023px) {
    .product-information-96oz rte-formatter.product-description,
    rte-formatter.product-description {
        margin-bottom: 0.125rem !important;
    }

    .subscription-value-label .subscription-value-props {
        display: none !important;
    }

    .subscription-value-props ul {
        gap: 4px;
        padding-inline: 6px;
    }
}

@media (max-width: 768px) {
    .review-heading h2 {
        font-size: 40px !important;
    }
}

.selected-product {
    outline: 2px solid var(--color-gold);
}

